--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <div class = "firstImgDiv">
             <img class ="firstImg" src="imgs/webpic.jpg">
         </div>
+        <div class = "firstImgDiv">
+            <img class ="firstImg" src="imgs/webpic3.jpg">
+        </div>
+        <div class = "firstImgDiv">
+            <img class ="firstImg" src="imgs/webpic4.jpg">
+        </div>
         
         <script src="" async defer></script>
     </body>
