--- a/index.html
+++ b/index.html
@@ -18,10 +18,31 @@
             <img class ="firstImg" src="imgs/webpic.jpg">
         </div>
 
+
+        <div class="line1">
+            <img class="prod" src ="imgs/1.png">
+            <img class="prod" src="imgs/2.png">
+        </div>
+
+        <div class="line1">
+            <img class="prod" src ="imgs/3.png">
+            <img class="prod" src="imgs/4.png">
+        </div>
+
         <div class = "firstImgDiv">
             <img class ="firstImg" src="imgs/webpic3.jpg">
         </div>
+
+        <div class="line1">
+            <img class="prod" src ="imgs/1.png">
+            <img class="prod" src="imgs/2.png">
+        </div>
         
+        <div class="line1">
+            <img class="prod" src ="imgs/3.png">
+            <img class="prod" src="imgs/4.png">
+        </div>
+
         <div class = "firstImgDiv">
             <img class ="firstImg" src="imgs/webpic4.jpg">
         </div>
