--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic4.jpg">
+            <img class ="firstImg" src="imgs/webpic4.JPG">
         </div> 
         
         <script src="" async defer></script>
