--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="top">
-            <p class="topText">KL9Y</p>
+        
+
+        <div class = "firstImgDiv">
+            <img class ="firstImg" src="imgs/logo.png">
         </div>
 
         <div class = "firstImgDiv">
