--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
         <div class="line1">
-            <img class="prod" src ="imgs/1.png">
+            <img class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">
             <img class="prod" src="imgs/2.png">
         </div>
 
