--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>KL9Y</title>
+        <title>KL9Y - Clothing</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -13,7 +13,7 @@
         
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/logo.png">
+            <img class ="firstImg" src="imgs/Limitless.png">
         </div>
 
         <div class = "firstImgDiv">
@@ -32,7 +32,7 @@
         </div>
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic.jpg">
+            <img class ="firstImg" src="imgs/webpic4.jpg">
         </div>
 
         <div class="line1">
@@ -46,7 +46,7 @@
         </div>
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic4.JPG">
+            <img class ="firstImg" src="imgs/webpic.JPG">
         </div> 
         
         <script src="" async defer></script>
