--- a/index.html
+++ b/index.html
@@ -1,54 +1,22 @@
 <!DOCTYPE html>
-
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>KL9Y - Clothing</title>
+        <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
-        
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/Limitless.png">
-        </div>
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic3.jpg">
-        </div>
-
-
-        <div class="line1">
-            <a href="hoodie1.html"> <img class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png"> </a>
-            <img class="prod" src="imgs/2.png">
-        </div>
-
-        <div class="line1">
-            <img class="prod" src ="imgs/3.png">
-            <img class="prod" src="imgs/4.png">
-        </div>
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic4.jpg">
-        </div>
-
-        <div class="line1">
-            <img class="prod" src ="imgs/1.png">
-            <img class="prod" src="imgs/2.png">
-        </div>
-
-        <div class="line1">
-            <img class="prod" src ="imgs/3.png">
-            <img class="prod" src="imgs/4.png">
-        </div>
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic.JPG">
-        </div> 
-        
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <p>COMING SOON</p>
         <script src="" async defer></script>
     </body>
 </html>
