--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body>
+    <body style="text-align: center; justify-content: center; text-align: center;">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <p>COMING SOON</p>
+        <img style="max-width: 90%;" src="imgs/logo.png">
+        <p style="font-size: 40px;">COMING SOON</p>
+        <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;">
+            <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
+            <input type="email" id="email" name="email">
+            <input type="submit">
+          </form>
         <script src="" async defer></script>
     </body>
 </html>
