implemented email form

--- a/nick.html
+++ b/nick.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic.JPG">
+            <img class ="firstImg" src="imgs/webpic.jpg">
         </div> 
         
         <script src="" async defer></script>
