--- a/index.html
+++ b/index.html
@@ -18,11 +18,24 @@
         <![endif]-->
         <img style="max-width: 90%;" src="imgs/logo.png">
         <p style="font-size: 40px;">COMING SOON</p>
-        <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;">
+        <!-- <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;" action="mailto:klaytondalpra@yahoo.com">
             <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
             <input type="email" id="email" name="email">
             <input type="submit">
-          </form>
+          </form>-->
+
+
+          <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
+            <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
+            <input type="email" name="email">
+            <!-- add hidden Honeypot input to prevent spams -->
+            <input type="hidden" name="_gotcha" style="display:none !important">
+            <!-- checkbox handle -->
+            <!-- select field handle -->
+            <button type="submit">Submit</button>
+        </form>
+        <p>You will be the first to hear about releases and deals</p>
+
         <script src="" async defer></script>
     </body>
 </html>
