redesigned coming soon page

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>KL9Y - Clothing</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="text-align: center; justify-content: center; text-align: center;">
+    <body style="text-align: center; justify-content: center; align-items: center; background-color: rgb(44, 44, 44);">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <img style="max-width: 90%;" src="imgs/logo.png">
-        <p style="font-size: 40px;">COMING SOON</p>
+        <p style="font-size: 40px; color: white;">COMING SOON</p>
         <!-- <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;" action="mailto:klaytondalpra@yahoo.com">
             <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
             <input type="email" id="email" name="email">
@@ -25,16 +25,22 @@
           </form>-->
 
 
-          <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
-            <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
-            <input type="email" name="email">
+          <div style="width: 50%; text-align: center; align-items: center; flex: auto; margin: auto; justify-content: center;">
+          <form style="background-color: white; padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
+            <p style="font-size: 30px;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
+            <div >
+                <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email">
+            </div>
             <!-- add hidden Honeypot input to prevent spams -->
             <input type="hidden" name="_gotcha" style="display:none !important">
             <!-- checkbox handle -->
             <!-- select field handle -->
-            <button type="submit">Submit</button>
+            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
         </form>
-        <p>You will be the first to hear about releases and deals</p>
+    </div>
+        
+
+        <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">
 
         <script src="" async defer></script>
     </body>
