--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <form style="background-color: white; padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
             <p style="font-size: 30px;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
             <div >
-                <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email">
+                <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email" required>
             </div>
             <!-- add hidden Honeypot input to prevent spams -->
             <input type="hidden" name="_gotcha" style="display:none !important">
