--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body style="text-align: center; justify-content: center; align-items: center; background-color: rgb(44, 44, 44);">
+    <body style="text-align: center; justify-content: center; align-items: center; background-color: rgb(44, 44, 44); max-width: 100%; overflow-x: hidden;">
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
