--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <input type="hidden" name="_gotcha" style="display:none !important">
             <!-- checkbox handle -->
             <!-- select field handle -->
-            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
+            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; text-align: center;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
         </form>
     </div>
         
