background image added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img style="max-width: 90%;" src="imgs/logo.png">
+        <img style="max-width: 90%; max-height: 400px; margin-top: 2%;" src="imgs/logocropped.png">
         <p style="font-size: 40px; color: white;">COMING SOON</p>
         <!-- <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;" action="mailto:klaytondalpra@yahoo.com">
             <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
@@ -25,9 +25,9 @@
           </form>-->
 
 
-          <div style="width: 75%; text-align: center; align-items: center; flex: auto; margin: auto; justify-content: center;">
-          <form style="background-color: white; padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
-            <p style="font-size: 30px;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
+          <div style="width: 75%; text-align: center; align-items: center; flex: auto; margin: auto; justify-content: center; background-image: url('imgs/ouo.jpeg'); border-radius: 20px;">
+          <form style=" padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
+            <p style="font-size: 30px; color: white;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
             <div >
                 <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email" required>
             </div>
@@ -35,7 +35,7 @@
             <input type="hidden" name="_gotcha" style="display:none !important">
             <!-- checkbox handle -->
             <!-- select field handle -->
-            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; text-align: center;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
+            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; text-align: center; color: black;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
         </form>
     </div>
         
