--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 
 
           <div style="width: 75%; text-align: center; align-items: center; flex: auto; margin: auto; justify-content: center; background-image: url('imgs/ouo.jpeg'); border-radius: 20px;">
-          <form style=" padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
+        
+            <form style=" padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
             <p style="font-size: 30px; color: white;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
             <div >
-                <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email" required>
-            </div>
+                <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email">
+           </div>
             <!-- add hidden Honeypot input to prevent spams -->
             <input type="hidden" name="_gotcha" style="display:none !important">
-            <!-- checkbox handle -->
             <!-- select field handle -->
-            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%; text-align: center; color: black;" type="email" name="email" placeholder="Email" style="width: 20%; height: 30px;" type="submit">Submit</button>
+            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%;height: 30px; text-align: center; color: black;" type="submit">Submit</button>
         </form>
     </div>
-        
+
 
         <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">
 
