--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
 
-        <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">
+       <!-- <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">-->
 
         <script src="" async defer></script>
     </body>
