--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!-- add hidden Honeypot input to prevent spams -->
             <input type="hidden" name="_gotcha" style="display:none !important">
             <!-- select field handle -->
-            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%;height: 30px; text-align: center; align-items: center; color: black; background-color: purple;" type="submit">Submit</button>
+            <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 30%;height: 30px; text-align: center; align-items: center; color: black; background-color: purple; margin: auto;" type="submit">Submit</button>
         </form>
     </div>
 
