centered image on video

--- a/nick.html
+++ b/nick.html
@@ -11,8 +11,9 @@
     </head>
     <body>
         
-        <div style="text-align: center; align-items: center; justify-content: center;">
+        <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
             <img style="position: absolute; margin: auto; display: block;" src="imgs/logocropped.png">
+
             <video autoplay muted loop id="myVideo">
                 <source src="imgs/Background.mp4" type="video/mp4">
             </video>
