--- a/nick.html
+++ b/nick.html
@@ -14,7 +14,7 @@
         <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
             <img style="position: absolute; margin: auto; display: block;" src="imgs/logocropped.png">
 
-            <video autoplay muted loop id="myVideo">
+            <video autoplay muted loop id="myVideo" style="width: 100%;">
                 <source src="imgs/Background.mp4" type="video/mp4">
             </video>
             
