--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <img style="max-width: 70%; max-height: 400px; margin-top: 2%;" src="imgs/logocropped.png">
+
+        <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
+            <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">
+
+            <video autoplay muted loop id="myVideo" style="width: 110%; overflow: hidden;">
+                <source src="imgs/Background.mp4" type="video/mp4">
+            </video>
+            
+        </div>
+        
         <p style="font-size: 40px; color: white;">COMING SOON</p>
         <!-- <form style="background-color: black; padding-top: 3%; padding-bottom: 3%; border-radius: 100px;" action="mailto:klaytondalpra@yahoo.com">
             <label style="color: white; font-size: 20px;" for="email">Enter your email:</label>
@@ -38,6 +47,7 @@
             <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 40%;height: 30px; text-align: center; align-items: center; color: black; background-color: purple; margin: auto;" type="submit">Submit</button>
         </form>
     </div>
+    <div style="margin-bottom: 20%;"></div>
 
 
        <!-- <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">-->
