--- a/nick.html
+++ b/nick.html
@@ -12,9 +12,9 @@
     <body>
         
         <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
-            <img style="position: absolute; margin: auto; display: block;" src="imgs/logocropped.png">
+            <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">
 
-            <video autoplay muted loop id="myVideo" style="width: 100%;">
+            <video autoplay muted loop id="myVideo" style="width: 110%; overflow: hidden;">
                 <source src="imgs/Background.mp4" type="video/mp4">
             </video>
             
