--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
             <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">
 
-            <video autoplay muted loop id="myVideo" style="width: 110%; overflow: hidden;">
+            <video autoplay muted playsinline loop id="myVideo" style="width: 110%; overflow: hidden;">
                 <source src="imgs/Background.mp4" type="video/mp4">
             </video>
             
