--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <![endif]-->
 
         <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
-            <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">
+           <!-- <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">-->
 
             <video autoplay muted playsinline defaultMuted loop id="myVideo" style="width: 110%; overflow: hidden;">
-                <source src="imgs/Background.mp4" type="video/mp4">
+                <source src="imgs/Untitled.mp4" type="video/mp4">
             </video>
             
         </div>
