--- a/771.html
+++ b/771.html
@@ -24,7 +24,7 @@
        
 
         <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/webpic3.jpg">
+            <img class ="firstImg" src="imgs/mainblue.jpg">
         </div>
 
 
