--- a/771.html
+++ b/771.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>KL9Y - Clothing</title>
+        <link rel="icon" type="image/x-icon" href="imgs/favicon-32x32.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
