--- a/hoodie1.html
+++ b/hoodie1.html
@@ -18,6 +18,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <div class="logoHolder">
+            <img class="kl9yLogo" src="imgs/ThickerLogoSmaller.png">
+        </div>
+
         <div class="buyingDiv">
             <p>Buy Here:</p>
             
