--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/x-icon" href="imgs/favicon-32x32.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body style="text-align: center; justify-content: center; align-items: center; background-color: rgb(44, 44, 44); max-width: 100%; overflow-x: hidden;">
         <!--[if lt IE 7]>
@@ -38,7 +38,7 @@
           <div style="width: 80%; text-align: center; align-items: center; flex: auto; margin: auto; justify-content: center; background-image: url('imgs/ouo.jpeg'); border-radius: 20px;">
         
             <form style=" padding-top: 4%; padding-bottom: 4%; border-radius: 10px; " action="https://getform.io/f/a098f6a4-9b56-49e4-a0df-768bcc53f732" method="POST">
-            <p style="font-size: 30px; color: white;">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
+            <p class="disc">UNLOCK DISCOUNTS AND GET NOTIFIED OF RELEASES</p>
             <div >
                 <input style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 40%; height: 30px; margin-bottom: 1%;" type="email" name="email" placeholder="Email" required>
            </div>
