--- a/771.html
+++ b/771.html
@@ -31,7 +31,7 @@
 
         <div class="line1">
             <a href="hoodie1.html"> <img class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png"> </a>
-            <img class="prod" src="imgs/2.png">
+            <img class="prod" src="imgs/scriptmens.png">
         </div>
 
         <div class="line1">
