--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <!-- select field handle -->
             <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 40%;height: 30px; text-align: center; align-items: center; color: black; background-color: purple; margin: auto;" type="submit">Submit</button>
         </form>
+        <p style="color: white;">By submitting this form and signing up for emails, you consent to receive marketing emails (e.g. promos, releases) from KL9Y at the email provided. Consent is not a condition of purchase. Unsubscribe at any time by clicking the unsubscribe link (where available).</p>
+        <a style="color: white;" href="privacy.html">Privacy Policy</a>
     </div>
     <div style="margin-bottom: 20%;"></div>
 
@@ -47,5 +49,6 @@
        <!-- <img style="max-height: 400px;" class="prod" src ="imgs/hoodie1/unisex-premium-hoodie-black-back-63f6f197a92e0.png">-->
 
         <script src="" async defer></script>
+        
     </body>
 </html>
