--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button style="border-style: solid; border-width: 1px; border-color: black; font-size: 20px; width: 40%;height: 30px; text-align: center; align-items: center; color: black; background-color: purple; margin: auto;" type="submit">Submit</button>
         </form>
         <p style="color: white; font-size: 10px;">By submitting this form and signing up for emails, you consent to receive marketing emails (e.g. promos, releases) from KL9Y at the email provided. Consent is not a condition of purchase. Unsubscribe at any time by clicking the unsubscribe link (where available).</p>
-        <a style="color: white;" href="privacy.html">Privacy Policy</a>
+        <a style="color: white;" href="https://kl9y.com/privacy">Privacy Policy</a>
     </div>
     <div style="margin-bottom: 20%;"></div>
 
