nav bar adjustments

--- a/771.html
+++ b/771.html
@@ -21,7 +21,7 @@
              
          </div>
 
-         <div class="navBar" style="text-align: center; padding-top: 20px;">
+         <div class="navBar" style="text-align: center; padding-top: 40px;">
             <nav>
                 <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
                     <li style="display: inline;">
@@ -37,6 +37,12 @@
                             <a href="https://kl9y.com/privacy">Link 2</a>
                             <a href="https://kl9y.com/privacy">Link 3</a>
                         </div>
+                    </li>
+                    <li style="display: inline;">
+                        <a class="navElem">|</a>
+                    </li>
+                    <li style="display: inline;">
+                        <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
                     </li>
                 </ul>
                 
