--- a/hoodie1.html
+++ b/hoodie1.html
@@ -58,7 +58,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="imgs/243737ed-7ee6-49af-a0c4-2d4f7e5578f5.png" style="width: 100%;">
+                <img src="imgs/prodlist2.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y Helmet Hoodie</h1>
