--- a/test.html
+++ b/test.html
@@ -22,6 +22,35 @@
             <img class="kl9yLogo" src="imgs/ThickerLogoSmaller.png">
         </div>
 
+        <div class="navBar" style="text-align: center; padding-top: 40px;">
+            <nav>
+                <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
+                    <li style="display: inline;">
+                        <a class="navElem" href="https://kl9y.com/privacy">Shop All</a>
+                    </li>
+                    <li style="display: inline;">
+                        <a class="navElem">|</a>
+                    </li>
+                    <li class="dropdown1">
+                        <a class="navElem" href="https://kl9y.com/privacy">New Releases</a>
+                        <div class="dropdown-content">
+                            <a href="https://kl9y.com/privacy">Link 1</a>
+                            <a href="https://kl9y.com/privacy">Link 2</a>
+                            <a href="https://kl9y.com/privacy">Link 3</a>
+                        </div>
+                    </li>
+                    <li style="display: inline;">
+                        <a class="navElem">|</a>
+                    </li>
+                    <li style="display: inline;">
+                        <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
+                    </li>
+                </ul>
+                
+            </nav>
+            
+         </div>
+
 
         <nav>
             <div class="navbar">
