--- a/hoodie1.html
+++ b/hoodie1.html
@@ -18,11 +18,30 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+
+        <nav>
+            <div class="navbar">
+              <div class="container nav-container">
+                  <input class="checkbox" type="checkbox" name="" id="" />
+                  <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                  </div>  
+                <div class="menu-items">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">about</a></li>
+                  <li><a href="#">blogs</a></li>
+                  <li><a href="#">portfolio</a></li>
+                  <li><a href="#">contact</a></li>
+                </div>
+              </div>
+            </div>
+          </nav>
+
         <div class="logoHolder">
             <img class="kl9yLogo" src="imgs/ThickerLogoSmaller.png">
         </div>
-
-
 
         <div class="navBar" style="text-align: center; padding-top: 40px;">
             <nav>
@@ -48,9 +67,7 @@
                         <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
                     </li>
                 </ul>
-                
             </nav>
-            
          </div>
 
 
