Product Link changed

--- a/hoodie1.html
+++ b/hoodie1.html
@@ -80,7 +80,7 @@
             <div class="prodDetails">
                 <h1>KL9Y Helmet Hoodie</h1>
                 <p class="priceText">$ 50</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/eVabLleDo3AD3Sg3ce';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
                 <p class = "detailText">DETAILS</p>
                 <p class="detailText">80% cotton, 20% polyester blend fleece</p>
                 <p class="detailText">Fabric weight: 8.5 oz./yd²</p>
