2nd Product added

--- a/771.html
+++ b/771.html
@@ -78,7 +78,7 @@
 
         <div class="line1">
             <a href="hoodie1.html"> <img class="prod" src ="imgs/prodlist2.jpg"> </a>
-            <img class="prod" src="imgs/scriptmens.png">
+            <a href="hoodie2.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg"> </a>
         </div>
 
         <div class="line1">
