--- a/hoodie2.html
+++ b/hoodie2.html
@@ -75,10 +75,10 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="imgs/SplatterPaintPurple.jpg" style="width: 100%;">
+                <img src="imgs/prodlist2.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>KL9Y Splatter Paint Helmet Hoodie</h1>
+                <h1>KL9Y Helmet Hoodie</h1>
                 <p class="priceText">$ 50</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
                 <p class = "detailText">DETAILS</p>
