--- a/hoodie2.html
+++ b/hoodie2.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>9 Hoodie</title>
-        <link rel="icon" type="image/x-icon" href="imgs/ThickerLogoSmaller.png">
+        <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -40,7 +40,7 @@
           </nav>
 
         <div class="logoHolder">
-            <img class="kl9yLogo" src="imgs/ThickerLogoSmaller.png">
+            <img class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png">
         </div>
 
         <div class="navBar" style="text-align: center; padding-top: 40px;">
