--- a/771.html
+++ b/771.html
@@ -70,7 +70,7 @@
     
         
 
-        <div class="line1">
+        <div class="productLines">
                 <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
                     <p>Item Name</p>
                     <p>$9.99</p>
