--- a/hoodie2.html
+++ b/hoodie2.html
@@ -40,7 +40,7 @@
           </nav>
 
         <div class="logoHolder">
-            <img class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png">
+            <a href="https://kl9y.com"><img class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
         <div class="navBar" style="text-align: center; padding-top: 40px;">
