--- a/LimitlessPotential.html
+++ b/LimitlessPotential.html
@@ -31,10 +31,11 @@
                     <span class="line line3"></span>
                   </div>  
                 <div class="menu-items">
-                  <li><a href="https://kl9y.com/">Home</a></li>
-                  <li><a href="https://kl9y.com/LimitlessPotential">New Releases</a></li>
-                  <li><a href="https://kl9y.com/BTS">Behind The Scenes</a></li>
-                  <li><a href="https://kl9y.com/Contact">Contact</a></li>
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">about</a></li>
+                  <li><a href="#">blogs</a></li>
+                  <li><a href="#">portfolio</a></li>
+                  <li><a href="#">contact</a></li>
                 </div>
               </div>
             </div>
