--- a/771.html
+++ b/771.html
@@ -11,16 +11,11 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
         <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
-            <!-- <img style="position: absolute; margin: auto; display: block; max-height: 25%;" src="imgs/logocropped.png">-->
- 
              <video autoplay muted playsinline defaultMuted loop id="myVideo" style="width: 110%; overflow: hidden;">
                  <source src="imgs/WebVidBGLogo.mp4" type="video/mp4">
              </video>
-             
          </div>
-
          <nav>
             <div class="navbar">
               <div class="container nav-container">
@@ -39,7 +34,6 @@
               </div>
             </div>
           </nav>
-
         <div class="navBar" style="text-align: center; padding-top: 40px;">
             <nav>
                 <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
@@ -62,9 +56,19 @@
                     <li style="display: inline;">
                         <a class="navElem" href="https://kl9y.com/privacy">Behind The Scenes</a>
                     </li>
+                    <li style="display: inline;">
+                        <a class="navElem">|</a>
+                    </li>
+                    <li class="dropdown1">
+                        <a class="navElem" href="https://kl9y.com/Contact">Contact Us</a>
+                    </li>
                 </ul>
             </nav>
          </div>
+
+
+
+
 
         <div class="productLines">
                 <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
