--- a/products/hoodie1.html
+++ b/products/hoodie1.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <!--[if lt IE 7]>
