9 of hearts product added

--- a/products/9-of-hearts.html
+++ b/products/9-of-hearts.html
@@ -4,18 +4,17 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>KL9Y - Clothing</title>
+        <title>9 Of Hearts</title>
         <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <div style="text-align: center; align-items: center; justify-content: center; display: flex;">
-             <video autoplay muted playsinline defaultMuted loop id="myVideo" style="width: 110%; overflow: hidden;">
-                 <source src="imgs/WebVidBGLogo.mp4" type="video/mp4">
-             </video>
-         </div>
+        <div class="logoHolder">
+            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
+        </div>
+
          <nav>
             <div class="navbar">
               <div class="container nav-container">
@@ -69,35 +68,24 @@
 
 
 
+        <div class="prodMain">
+            <div class="prodImg">
+                <img src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
+            </div>
+            <div class="prodDetails">
+                <h1>9 Of Hearts Hoodie</h1>
+                <p class="priceText">$ 50</p>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
+   
 
-        <div class="productLines">
-                <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> <img class="prod" src ="imgs/products/9-of-hearts/9ofhearts.png">
-                    <p class="listingName">9 OF HEARTS</p>
-                    <p class="listingName">$50.00</p>
-                </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
-                <p class="listingName">SPLATTER PAINT HELMET</p>
-                <p class="listingName">$9.99</p></a>
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
-                <p class="listingName">Item Name</p>
-                <p class="listingName">$9.99</p></a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
-                <p class="listingName">Item Name</p>
-                <p class="listingName">$9.99</p></a>
+                <p class = "detailText">DETAILS</p>
+                <p class="detailText">80% cotton, 20% polyester blend fleece</p>
+                <p class="detailText">Fabric weight: 8.5 oz./yd²</p>
+                <p class="detailText">DTG Printed on the back</p>
+                <p class="detailText">Blank on the front</p>
+            </div>
         </div>
-
-        <div class="productLines">
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg"> </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg"> </a>
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg"> </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg"> </a>
-        </div>
-
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/boxblue.jpg">
-        </div>
-
+       
         
         <script src="" async defer></script>
     </body>
