--- a/products/hoodie1.html
+++ b/products/hoodie1.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>9 Hoodie</title>
-        <link rel="icon" type="image/x-icon" href="imgs/favicon.png">
+        <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles.css">
@@ -40,7 +40,7 @@
           </nav>
 
         <div class="logoHolder">
-            <a href="https://kl9y.com"><img class="kl9yLogo" src="imgs/9yOFFICIALSmaller.png"></a>
+            <a href="https://kl9y.com"><img class="kl9yLogo" src="../imgs/9yOFFICIALSmaller.png"></a>
         </div>
 
         <div class="navBar" style="text-align: center; padding-top: 40px;">
@@ -75,7 +75,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="imgs/SplatterPaintPurple.jpg" style="width: 100%;">
+                <img src="../imgs/SplatterPaintPurple.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y Splatter Paint Helmet Hoodie</h1>
