--- a/771.html
+++ b/771.html
@@ -75,9 +75,9 @@
                     <p class="listingName">9 OF HEARTS</p>
                     <p class="listingName">$50.00</p>
                 </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
+            <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.png">
                 <p class="listingName">SPLATTER PAINT HELMET</p>
-                <p class="listingName">$9.99</p></a>
+                <p class="listingName">$50.00</p></a>
             <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
                 <p class="listingName">Item Name</p>
                 <p class="listingName">$9.99</p></a>
