--- a/771.html
+++ b/771.html
@@ -75,7 +75,7 @@
                     <p class="listingName">9 OF HEARTS</p>
                     <p class="listingName">$50.00</p>
                 </a>
-            <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.png">
+            <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
                 <p class="listingName">SPLATTER PAINT HELMET</p>
                 <p class="listingName">$50.00</p></a>
             <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
