--- a/771.html
+++ b/771.html
@@ -73,14 +73,14 @@
         <div class="productLines">
                 <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> <img class="prod" src ="imgs/products/9-of-hearts/9ofhearts.png">
                     <p class="listingName">9 OF HEARTS</p>
-                    <p class="listingName">$50.00</p>
+                    <p class="listingName">$50</p>
                 </a>
             <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
                 <p class="listingName">SPLATTER PAINT HELMET</p>
-                <p class="listingName">$50.00</p></a>
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg">
-                <p class="listingName">Item Name</p>
-                <p class="listingName">$9.99</p></a>
+                <p class="listingName">$50</p></a>
+            <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
+                <p class="listingName">GAMING MOUSEPAD</p>
+                <p class="listingName">$50</p></a>
             <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
                 <p class="listingName">Item Name</p>
                 <p class="listingName">$9.99</p></a>
