--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -66,14 +66,14 @@
          </div>
 
 
- 
+
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/splatter-paint/splatter-paint.jpg" style="width: 100%;">
+                <img src="../imgs/products/mousepad/mousepad.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>SPLATTER PAINT HELMET HOODIE</h1>
+                <h1>KL9Y GAMING MOUSEPAD</h1>
                 <p class="priceText">$ 50</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
    
