--- a/771.html
+++ b/771.html
@@ -73,14 +73,17 @@
         <div class="productLines">
                 <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> <img class="prod" src ="imgs/products/9-of-hearts/9ofhearts.png">
                     <p class="listingName">9 OF HEARTS</p>
+                    <p class="listingName">HOODIE</p>
                     <p class="listingName">$50</p>
                 </a>
             <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
-                <p class="listingName">SPLATTER PAINT HELMET</p>
+                <p class="listingName">SPLATTER PAINT</p>
+                <p class="listingName">HELMET HOODIE</p>
                 <p class="listingName">$50</p></a>
-            <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/mousepadv2.jpg">
-                <p class="listingName">GAMING MOUSEPAD</p>
-                <p class="listingName">$50</p></a>
+            <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/ledmousepad.png">
+                <p class="listingName">LED GAMING</p>
+                <p class="listingName">MOUSEPAD</p>
+                <p class="listingName">$40</p></a>
             <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
                 <p class="listingName">Item Name</p>
                 <p class="listingName">$9.99</p></a>
