--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -70,19 +70,17 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/mousepad/mousepadv2.jpg" style="width: 100%;">
+                <img src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y GAMING MOUSEPAD</h1>
-                <p class="priceText">$ 50</p>
+                <p class="priceText">$ 40</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">50% cotton, 50% polyester blend fleece</p>
-                <p class="detailText">Fabric weight: 8 oz./yd²</p>
-                <p class="detailText">DTG Printed on the back</p>
-                <p class="detailText">Blank on the front</p>
+                <p class="detailText">35.4" x 15.7"</p>
+                <p class="detailText">LED Lights included</p>
             </div>
         </div>
        
