main page organized

--- a/771.html
+++ b/771.html
@@ -84,22 +84,12 @@
                 <p class="listingName">LED GAMING</p>
                 <p class="listingName">MOUSEPAD</p>
                 <p class="listingName">$40</p></a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg">
+            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
+                <p class="listingName">Item Name</p>
                 <p class="listingName">Item Name</p>
                 <p class="listingName">$9.99</p></a>
         </div>
-
-        <div class="productLines">
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg"> </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg"> </a>
-            <a class="imgA" href="hoodie2.html"> <img class="prod" src ="imgs/prodlist2.jpg"> </a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/SplatterPaintPurple.jpg"> </a>
-        </div>
-
-
-        <div class = "firstImgDiv">
-            <img class ="firstImg" src="imgs/boxblue.jpg">
-        </div>
+        <div style="margin-bottom: 50rem;"></div>
 
         
         <script src="" async defer></script>
