vintage wash hoodies added

--- a/771.html
+++ b/771.html
@@ -84,11 +84,34 @@
                 <p class="listingName">LED GAMING</p>
                 <p class="listingName">MOUSEPAD</p>
                 <p class="listingName">$40</p></a>
-            <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
-                <p class="listingName">Item Name</p>
-                <p class="listingName">Item Name</p>
-                <p class="listingName">$9.99</p></a>
+            <a class="imgA" href="https://kl9y.com/products/vintage-black"> <img class="prod" src ="imgs/products/vintage-black/vintage-black.jpg">
+                <p class="listingName">VINTAGE WASH</p>
+                <p class="listingName">BLACK HOODIE</p>
+                <p class="listingName">$40</p></a>
         </div>
+
+        <div class="productLines">
+            <a class="imgA" href="https://kl9y.com/products/9-of-hearts"> <img class="prod" src ="imgs/products/vintage-purple/vintage-purple.jpg">
+                <p class="listingName">VINTAGE WASH</p>
+                <p class="listingName">PURPLE HOODIE</p>
+                <p class="listingName">$40</p>
+            </a>
+        <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
+            <p class="listingName">SPLATTER PAINT</p>
+            <p class="listingName">HELMET HOODIE</p>
+            <p class="listingName">$50</p></a>
+        <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/ledmousepad.png">
+            <p class="listingName">LED GAMING</p>
+            <p class="listingName">MOUSEPAD</p>
+            <p class="listingName">$40</p></a>
+        <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
+            <p class="listingName">Item Name</p>
+            <p class="listingName">Item Name</p>
+            <p class="listingName">$9.99</p></a>
+    </div>
+
+
+
         <div style="margin-bottom: 50rem;"></div>
 
         
