--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -72,7 +72,7 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/mousepad/ledmousepad.png" style="width: 100%;">
+                <img src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>KL9Y GAMING MOUSEPAD</h1>
