mobile spacing update

--- a/771.html
+++ b/771.html
@@ -34,7 +34,7 @@
               </div>
             </div>
           </nav>
-        <div class="navBar" style="text-align: center; padding-top: 40px;">
+        <div class="navBar" style="text-align: center; padding-top: 40px; padding-bottom: 40px;">
             <nav>
                 <ul style="list-style-type: none; margin: 0; padding: 0; display: inline-block;">
                     <li style="display: inline;">
