--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>9 Of Hearts</title>
+        <title>Vintage Wash Black</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,14 +75,14 @@
                 <img src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>KL9Y GAMING MOUSEPAD</h1>
+                <h1>VINTAGE WASH BLACK HOODIE</h1>
                 <p class="priceText">$ 40</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">35.4" x 15.7"</p>
-                <p class="detailText">BUILT IN LED LIGHTS</p>
+                <p class="detailText"></p>
+                <p class="detailText"></p>
             </div>
         </div>
        
