Product links live

--- a/products/mousepad.html
+++ b/products/mousepad.html
@@ -77,7 +77,7 @@
             <div class="prodDetails">
                 <h1>KL9Y GAMING MOUSEPAD</h1>
                 <p class="priceText">$ 40</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/4gweXx2UGfjl3Sg3cj';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
