--- a/products/splatter-paint.html
+++ b/products/splatter-paint.html
@@ -75,7 +75,7 @@
             <div class="prodDetails">
                 <h1>SPLATTER PAINT HELMET HOODIE</h1>
                 <p class="priceText">$ 50</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAaHh9j48UX2Oc28e';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
