--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -77,7 +77,7 @@
             <div class="prodDetails">
                 <h1>VINTAGE WASH BLACK HOODIE</h1>
                 <p class="priceText">$ 40</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/6oE7v5fHs6MPdsQ4gj';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
