--- a/products/hat.html
+++ b/products/hat.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>9 Of Hearts</title>
+        <title>KL9Y Hat</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -67,12 +67,12 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img src="../imgs/products/9-of-hearts/9ofhearts.png" style="width: 100%;">
+                <img src="../imgs/products/hat/0933314a-e710-4c5b-baa8-ccfc471ad398.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
                 <h1>9 Of Hearts Hoodie</h1>
                 <p class="priceText">$ 50</p>
-                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kA7v53YK7QT74s6ot';">BUY NOW</button>
+                <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAdTteDob353Sg8wF';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
