--- a/771.html
+++ b/771.html
@@ -96,10 +96,10 @@
                 <p class="listingName">PURPLE HOODIE</p>
                 <p class="listingName">$40</p>
             </a>
-        <a class="imgA" href="https://kl9y.com/products/splatter-paint"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
-            <p class="listingName">SPLATTER PAINT</p>
-            <p class="listingName">HELMET HOODIE</p>
-            <p class="listingName">$50</p></a>
+        <a class="imgA" href="https://kl9y.com/products/hat"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
+            <p class="listingName">9Y LOGO</p>
+            <p class="listingName">HAT</p>
+            <p class="listingName">$30</p></a>
         <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/ledmousepad.png">
             <p class="listingName">LED GAMING</p>
             <p class="listingName">MOUSEPAD</p>
