--- a/771.html
+++ b/771.html
@@ -96,7 +96,7 @@
                 <p class="listingName">PURPLE HOODIE</p>
                 <p class="listingName">$40</p>
             </a>
-        <a class="imgA" href="https://kl9y.com/products/hat"> <img class="prod" src ="imgs/products/splatter-paint/splatter-paint.jpg">
+        <a class="imgA" href="https://kl9y.com/products/hat"> <img class="prod" src ="imgs/products/hat/0933314a-e710-4c5b-baa8-ccfc471ad398.png">
             <p class="listingName">9Y LOGO</p>
             <p class="listingName">HAT</p>
             <p class="listingName">$30</p></a>
