--- a/products/hat.html
+++ b/products/hat.html
@@ -70,16 +70,16 @@
                 <img src="../imgs/products/hat/0933314a-e710-4c5b-baa8-ccfc471ad398.png" style="width: 100%;">
             </div>
             <div class="prodDetails">
-                <h1>9 Of Hearts Hoodie</h1>
-                <p class="priceText">$ 50</p>
+                <h1>9Y LOGO HAT</h1>
+                <p class="priceText">$ 30</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/5kAdTteDob353Sg8wF';">BUY NOW</button>
    
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText">50% cotton, 50% polyester blend fleece</p>
-                <p class="detailText">Fabric weight: 8 oz./yd²</p>
-                <p class="detailText">DTG Printed on the back</p>
-                <p class="detailText">Blank on the front</p>
+                <p class="detailText">100% Cotton twill</p>
+                <p class="detailText">Adjustable Velcro® closure</p>
+                <p class="detailText">6 panel structure</p>
+                <p class="detailText">Embroidered</p>
             </div>
         </div>
        
