--- a/products/vintage-black.html
+++ b/products/vintage-black.html
@@ -81,8 +81,8 @@
    
 
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText"></p>
-                <p class="detailText"></p>
+                <p class="detailText">100% cotton</p>
+                <p class="detailText">8.25 oz fleece</p>
             </div>
         </div>
        
