--- a/771.html
+++ b/771.html
@@ -100,10 +100,10 @@
             <p class="listingName">9Y LOGO</p>
             <p class="listingName">HAT</p>
             <p class="listingName">$30</p></a>
-        <a class="imgA" href="https://kl9y.com/products/mousepad"> <img class="prod" src ="imgs/products/mousepad/ledmousepad.png">
-            <p class="listingName">LED GAMING</p>
-            <p class="listingName">MOUSEPAD</p>
-            <p class="listingName">$40</p></a>
+        <a class="imgA" href="https://kl9y.com/products/pants"> <img class="prod" src ="imgs/products/pants/pant white.jpg">
+            <p class="listingName">LIMITLESS</p>
+            <p class="listingName">PANTS</p>
+            <p class="listingName">$50</p></a>
         <a class="imgA" href="hoodie1.html"> <img class="prod" src ="imgs/products/mousepad/mousepad.jpg">
             <p class="listingName">Item Name</p>
             <p class="listingName">Item Name</p>
