--- a/products/pants.html
+++ b/products/pants.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Vintage Wash Black</title>
+        <title>Limitless Pants</title>
         <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,14 +72,14 @@
 
         <div class="prodMain">
             <div class="prodImg">
-                <img  id="productImage" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" style="width: 100%;">
+                <img  id="productImage" src="../imgs/products/pants/pant white.jpg" style="width: 100%;">
                 <div class="imageThumbnails">
-                    <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black-irl2.jpg" onclick="changeImage('../imgs/products/vintage-black/vintage-black-irl2.jpg')">
-                    <img class="thumbnails" src="../imgs/products/vintage-black/vintage-black.jpg" onclick="changeImage('../imgs/products/vintage-black/vintage-black.jpg')">
+                    <img class="thumbnails" src="../imgs/products/pants/pant white.jpg" onclick="changeImage('../imgs/products/pants/pant white.jpg')">
+                    <img class="thumbnails" src="../imgs/products/pants/pant black.jpg" onclick="changeImage('../imgs/products/pants/pant black.jpg')">
                 </div>
             </div>
             <div class="prodDetails">
-                <h1>VINTAGE WASH BLACK HOODIE</h1>
+                <h1>LIMITLESS POTENTIAL PANTS</h1>
                 <p class="priceText">$ 40</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/00g6r1eDoefhdsQ004';">BUY NOW</button>
    
