--- a/products/vintage-purple.html
+++ b/products/vintage-purple.html
@@ -79,10 +79,9 @@
                 <p class="priceText">$ 40</p>
                 <button class="buyNowBtn" onclick="window.location.href='https://buy.stripe.com/3cs9Ddan82wz4WkfZ6';">BUY NOW</button>
    
-
                 <p class = "detailText">DETAILS</p>
-                <p class="detailText"></p>
-                <p class="detailText"></p>
+                <p class="detailText">100% cotton</p>
+                <p class="detailText">8.25 oz fleece</p>
             </div>
         </div>
        
